--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Send Message via Email</title>
-  <!-- Update the SDK URL to the latest supported version -->
-  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.10.0/email.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" />
 </head>
 <body>
   <h1>Send Message via Email</h1>
